<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/quiz_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/quiz_name"
            android:textSize="36dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/question_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answer_1_kine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_answer_1" />

                <RadioButton
                    android:id="@+id/answer_1_kindle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_answer_2" />

                <RadioButton
                    android:id="@+id/answer_1_kettle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_answer_3" />

                <RadioButton
                    android:id="@+id/answer_1_clowder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_answer_4" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/question_2"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/answer_2_clowder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_1" />

            <CheckBox
                android:id="@+id/answer_2_clutter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_2" />

            <CheckBox
                android:id="@+id/answer_2_glaring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_3" />

            <CheckBox
                android:id="@+id/answer_2_pounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/question_3"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_3_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answer_4_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="True" />

                <RadioButton
                    android:id="@+id/answer_4_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="False" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:textSize="24sp"
            android:text="@string/submitQuiz"
            android:textColor="#fff"
            android:onClick="submitQuiz"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>